[package]
name = "cs395_project"
version = "0.3.4"
authors = ["Caleb Anderson <cande045@odu.edu>"]
edition = "2021"

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "*"

[dev-dependencies]
hamcrest2 = "*" 
stringreader = "0.1.1"
thiserror = "2.0.12"
eyre = "0.6.12"
rstest = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.5"
